--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,11 @@ updates:
           - "xunit*"
           - "MSTest.*"
           - "Microsoft.NET.Test.*"
+      # often get updates in lockstep with dotnet
+      test-ms-essential:
+        patterns:
+          - "Microsoft.Extensions.*"
+          - "System.Configuration.*"
   - package-ecosystem: "github-actions" # See documentation for possible values
     directory: "/" # Location of package manifests
     open-pull-requests-limit: 99
