feat: introduce CommunityToolkit.Diagnostics for guards
also some refactoring to align with net framework design guidelines

--- a/OSLC4Net_SDK/OSLC4Net.ChangeManagement/OSLC4Net.ChangeManagementCommon.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.ChangeManagement/OSLC4Net.ChangeManagementCommon.csproj
@@ -12,6 +12,7 @@
     <ProjectReference Include="..\OSLC4Net.Core\OSLC4Net.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Diagnostics" />
     <PackageReference Include="log4net" />
   </ItemGroup>
 </Project>
