--- a/OSLC4Net_SDK/OSLC4Net.Core.JsonProvider/OSLC4Net.Core.JsonProvider.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Core.JsonProvider/OSLC4Net.Core.JsonProvider.csproj
@@ -11,6 +11,7 @@
     <ProjectReference Include="..\OSLC4Net.Core\OSLC4Net.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Diagnostics" />
     <PackageReference Include="System.Json" />
     <PackageReference Include="log4net" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" />
