--- a/OSLC4Net_SDK/Tests/OSLC4Net.Core.QueryTests/OSLC4Net.Core.QueryTests.csproj
+++ b/OSLC4Net_SDK/Tests/OSLC4Net.Core.QueryTests/OSLC4Net.Core.QueryTests.csproj
@@ -6,6 +6,7 @@
     <ProjectReference Include="..\..\OSLC4Net.Core.Query\OSLC4Net.Core.Query.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Diagnostics" />
     <PackageReference Include="coverlet.collector">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
