--- a/OSLC4Net_SDK/Directory.Packages.props
+++ b/OSLC4Net_SDK/Directory.Packages.props
@@ -13,13 +13,13 @@
     <PackageVersion Include="NuGet.Build.Tasks.Pack" Version="6.12.1" />
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageVersion Include="System.Json" Version="4.8.0" />
-
     <!-- depedencyManagement / convergence -->
     <PackageVersion Include="System.Net.Http" Version="4.3.4" />
     <PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
     <!-- Main deps -->
     <PackageVersion Include="dotNetRdf.Core" Version="3.3.2" />
     <PackageVersion Include="Antlr3.Runtime" Version="3.5.1" />
+    <PackageVersion Include="CommunityToolkit.Diagnostics" Version="8.4.0" />
     <!-- conneg support &c for System.Net.Http -->
     <PackageVersion Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
     <!-- Test deps -->
