--- a/OSLC4Net_SDK/Examples/Oslc4NetExamples.Client/Oslc4NetExamples.Client.csproj
+++ b/OSLC4Net_SDK/Examples/Oslc4NetExamples.Client/Oslc4NetExamples.Client.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Diagnostics" />
     <PackageReference Include="dotNetRdf" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
