--- a/OSLC4Net_SDK/Tests/OSLC4Net.Client.Tests/OSLC4Net.Client.Tests.csproj
+++ b/OSLC4Net_SDK/Tests/OSLC4Net.Client.Tests/OSLC4Net.Client.Tests.csproj
@@ -11,6 +11,7 @@
     <ProjectReference Include="..\..\OSLC4Net.Client\OSLC4Net.Client.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Diagnostics" />
     <PackageReference Include="coverlet.collector">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
