--- a/OSLC4Net_SDK/Tests/OSLC4Net.ChangeManagementTest/OSLC4Net.ChangeManagementTest.csproj
+++ b/OSLC4Net_SDK/Tests/OSLC4Net.ChangeManagementTest/OSLC4Net.ChangeManagementTest.csproj
@@ -9,6 +9,7 @@
     <ProjectReference Include="..\..\OSLC4Net.Core.DotNetRdfProvider\OSLC4Net.Core.DotNetRdfProvider.csproj" />
     <ProjectReference Include="..\..\OSLC4Net.ChangeManagement\OSLC4Net.ChangeManagementCommon.csproj" />
     <ProjectReference Include="..\..\OSLC4Net.Client\OSLC4Net.Client.csproj" />
+    <ProjectReference Include="..\OSLC4Net.Test.AspireHost\OSLC4Net.Test.AspireHost.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Diagnostics" />
@@ -16,12 +17,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json"/>
-    <PackageReference Include="log4net"/>
-    <PackageReference Include="Microsoft.AspNet.WebApi.Client"/>
-    <PackageReference Include="Microsoft.NET.Test.Sdk"/>
-    <PackageReference Include="MSTest.TestFramework"/>
-    <PackageReference Include="MSTest.TestAdapter"/>
+    <PackageReference Include="Aspire.Hosting.Testing" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
+    <PackageReference Include="log4net" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="MSTest.TestFramework" />
+    <PackageReference Include="MSTest.TestAdapter" />
   </ItemGroup>
 
   <ItemGroup>
