--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     defaults:
       run:
-        working-directory: OSLC4Net_SDK/
+        working-directory: main/OSLC4Net_SDK/
     env:
       NUGET_PACKAGES: ${{ github.workspace }}/.nuget/packages
       # TAG_VALUE: ${{ github.ref_name || inputs.version }}
@@ -69,7 +69,7 @@ jobs:
         with:
           show-progress: false
           persist-credentials: false
-          path: oslc4net
+          path: main
       - name: Checkout Code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
