--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,7 +119,8 @@ jobs:
       - name: Build
         run: dotnet build --no-restore
       - name: Test
-        run: dotnet test --no-build --verbosity normal  --filter TestCategory!=RunningOslcServerRequired --collect:"XPlat Code Coverage"
+        # run: dotnet test --no-build --verbosity normal  --filter TestCategory!=RunningOslcServerRequired --collect:"XPlat Code Coverage"
+        run: dotnet test --no-build --verbosity normal  --collect:"XPlat Code Coverage"
       # - name: Set version suffix
       #   id: version
       #   run: echo "::set-output name=suffix::$(date +'-ts.%y%m%d%H%M')"
