test: switch to xunit v3; switch to ILogger in OslcClient

--- a/OSLC4Net_SDK/OSLC4Net.Client/OSLC4Net.Client.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Client/OSLC4Net.Client.csproj
@@ -36,5 +36,6 @@
     <PackageReference Include="dotNetRdf.Core"/>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client"/>
     <PackageReference Include="log4net"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions"/>
   </ItemGroup>
 </Project>
