--- a/OSLC4Net_SDK/Directory.Packages.props
+++ b/OSLC4Net_SDK/Directory.Packages.props
@@ -5,11 +5,12 @@
   </PropertyGroup>
   <PropertyGroup>
     <!-- Versions used by several individual references below -->
-    <MSTestVersion>3.8.3</MSTestVersion>
+    <AspireVersion>9.1.0</AspireVersion>
   </PropertyGroup>
   <ItemGroup>
     <!-- For removal -->
     <PackageVersion Include="log4net" Version="2.0.17"/>
+    <PackageVersion Include="Meziantou.Extensions.Logging.Xunit.v3" Version="1.1.2"/>
     <PackageVersion Include="NuGet.Build.Tasks.Pack" Version="6.12.1"/>
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.3"/>
     <PackageVersion Include="System.Json" Version="4.8.0"/>
@@ -23,17 +24,14 @@
     <!-- conneg support &c for System.Net.Http -->
     <PackageVersion Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0"/>
     <!-- Test deps -->
-    <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.1.0"/>
-    <PackageVersion Include="Aspire.Hosting.Testing" Version="9.1.0"/>
+    <PackageVersion Include="Aspire.Hosting.AppHost" Version="$(AspireVersion)"/>
+    <PackageVersion Include="Aspire.Hosting.Testing" Version="$(AspireVersion)"/>
     <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3"/>
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0"/>
-    <PackageVersion Include="xunit" Version="2.9.3"/>
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.2"/>
     <PackageVersion Include="NSubstitute" Version="5.3.0"/>
     <PackageVersion Include="NSubstitute.Analyzers.CSharp" Version="1.0.17"/>
     <PackageVersion Include="coverlet.collector" Version="6.0.4"/>
-    <PackageVersion Include="MSTest.TestFramework" Version="$(MSTestVersion)"/>
-    <PackageVersion Include="MSTest.TestAdapter" Version="$(MSTestVersion)"/>
     <!-- Examples only -->
     <PackageVersion Include="dotNetRdf" Version="3.3.2"/>
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3"/>
@@ -42,5 +40,6 @@
     <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.3"/>
     <PackageVersion Include="Microsoft.Extensions.Logging" Version="9.0.3"/>
     <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.3"/>
+    <PackageVersion Include="xunit.v3" Version="2.0.1"/>
   </ItemGroup>
 </Project>
