--- a/OSLC4Net_SDK/Tests/OSLC4Net.Client.Tests/OSLC4Net.Client.Tests.csproj
+++ b/OSLC4Net_SDK/Tests/OSLC4Net.Client.Tests/OSLC4Net.Client.Tests.csproj
@@ -16,7 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="log4net" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
     <PackageReference Include="Meziantou.Extensions.Logging.Xunit.v3"/>
     <PackageReference Include="Microsoft.Extensions.Hosting"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
