--- a/OSLC4Net_SDK/Tests/OSLC4Net.Test.RefImpl/OSLC4Net.Test.RefImpl.csproj
+++ b/OSLC4Net_SDK/Tests/OSLC4Net.Test.RefImpl/OSLC4Net.Test.RefImpl.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <RootNamespace>OSLC4Net.ChangeManagementTest</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\OSLC4Net.Core\OSLC4Net.Core.csproj"/>
@@ -9,6 +10,7 @@
     <ProjectReference Include="..\..\OSLC4Net.Core.DotNetRdfProvider\OSLC4Net.Core.DotNetRdfProvider.csproj"/>
     <ProjectReference Include="..\..\OSLC4Net.ChangeManagement\OSLC4Net.ChangeManagementCommon.csproj"/>
     <ProjectReference Include="..\..\OSLC4Net.Client\OSLC4Net.Client.csproj"/>
+    <ProjectReference Include="..\..\OSLC4Net.Domains.RequirementsManagement\OSLC4Net.Domains.RequirementsManagement.csproj"/>
     <ProjectReference Include="..\OSLC4Net.Test.AspireHost\OSLC4Net.Test.AspireHost.csproj"/>
   </ItemGroup>
   <ItemGroup>
