--- a/.github/workflows/rebase.yml
+++ b/.github/workflows/rebase.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Harden Runner
         uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
         with:
-          disable-sudo: true
+          disable-sudo-and-containers: true
           egress-policy: block
           allowed-endpoints: >
             api.github.com:443
@@ -22,7 +22,7 @@ jobs:
 
       - uses: peter-evans/rebase@87c3fd9344792e51ab1c7494c3369620c84ed852 # v3.1.0
         with:
-          token: ${{ secrets.GH_PAT }} 
+          token: ${{ secrets.GH_PAT }}
           exclude-labels: |
             no-rebase
             dependencies
