--- a/OSLC4Net_SDK/OSLC4Net.Core.DotNetRdfProvider/OSLC4Net.Core.DotNetRdfProvider.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Core.DotNetRdfProvider/OSLC4Net.Core.DotNetRdfProvider.csproj
@@ -14,8 +14,8 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Diagnostics" />
     <PackageReference Include="dotNetRdf.Inferencing"/>
-    <PackageReference Include="log4net" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions"/>
     <PackageReference Include="Newtonsoft.Json" />
     <PackageReference Include="dotNetRdf.Core" />
   </ItemGroup>
