--- a/.github/workflows/rebase.yml
+++ b/.github/workflows/rebase.yml
@@ -1,7 +1,7 @@
 name: Rebase
 on:
-  schedule:
-    - cron:  '40 4 * * *'
+  # schedule:
+  #   - cron:  '40 4 * * *'
   workflow_dispatch:
 
 permissions:
