--- a/OSLC4Net_SDK/Directory.Packages.props
+++ b/OSLC4Net_SDK/Directory.Packages.props
@@ -33,6 +33,7 @@
     <PackageVersion Include="NSubstitute" Version="5.3.0"/>
     <PackageVersion Include="NSubstitute.Analyzers.CSharp" Version="1.0.17"/>
     <PackageVersion Include="coverlet.collector" Version="6.0.4"/>
+    <PackageVersion Include="FluentAssertions" Version="8.3.0" />
     <!-- Examples only -->
     <PackageVersion Include="dotNetRdf" Version="3.3.2"/>
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4"/>
