--- a/OSLC4Net_SDK/Tests/OSLC4NetExamples.Server.Tests/OSLC4NetExamples.Server.Tests.csproj
+++ b/OSLC4Net_SDK/Tests/OSLC4NetExamples.Server.Tests/OSLC4NetExamples.Server.Tests.csproj
@@ -21,9 +21,20 @@
     </PackageReference>
     <PackageReference Include="xunit.v3" />
     <PackageReference Include="FluentAssertions" />
+    <PackageReference Include="CommunityToolkit.Diagnostics"/>
+    <PackageReference Include="Aspire.Hosting.Testing"/>
+    <PackageReference Include="Meziantou.Extensions.Logging.Xunit.v3"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json"/>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client"/>
   </ItemGroup>
 
   <ItemGroup>
+      <ProjectReference Include="..\..\OSLC4Net.Core\OSLC4Net.Core.csproj"/>
+    <ProjectReference Include="..\..\OSLC4Net.Core.DotNetRdfProvider\OSLC4Net.Core.DotNetRdfProvider.csproj"/>
+    <ProjectReference Include="..\..\OSLC4Net.ChangeManagement\OSLC4Net.ChangeManagementCommon.csproj"/>
+    <ProjectReference Include="..\..\OSLC4Net.Client\OSLC4Net.Client.csproj"/>
+    <ProjectReference Include="..\..\OSLC4Net.Domains.RequirementsManagement\OSLC4Net.Domains.RequirementsManagement.csproj"/>
+    <ProjectReference Include="..\OSLC4NetExamples.Server.Tests.AspireHost\OSLC4NetExamples.Server.Tests.AspireHost.csproj"/>
     <ProjectReference Include="..\..\Examples\OSLC4NetExamples.Server.NetCoreApi\OSLC4NetExamples.Server.NetCoreApi.csproj" />
   </ItemGroup>
 
