--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,6 +103,12 @@ jobs:
           (Get-Content Tests/OSLC4Net.Test.AspireHost/OSLC4Net.Test.AspireHost.csproj) |
             ForEach-Object { $_ -replace '>net8.0<', '>${{ matrix.version.target }}<' } |
             Set-Content Tests/OSLC4Net.Test.AspireHost/OSLC4Net.Test.AspireHost.csproj
+          (Get-Content Tests/OSLC4Net.Test.RefImpl/OSLC4Net.Test.RefImpl.csproj) |
+            ForEach-Object { $_ -replace '>net8.0<', '>${{ matrix.version.target }}<' } |
+            Set-Content Tests/OSLC4Net.Test.RefImpl/OSLC4Net.Test.RefImpl.csproj
+          (Get-Content Tests/OSLC4NetExamples.Server.Tests/OSLC4NetExamples.Server.Tests.csproj) |
+            ForEach-Object { $_ -replace '>net8.0<', '>${{ matrix.version.target }}<' } |
+            Set-Content Tests/OSLC4NetExamples.Server.Tests/OSLC4NetExamples.Server.Tests.csproj
       - name: Cache NuGet
         # id: cache-nuget
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
