--- a/OSLC4Net_SDK/Directory.Packages.props
+++ b/OSLC4Net_SDK/Directory.Packages.props
@@ -36,6 +36,7 @@
     <PackageVersion Include="NSubstitute" Version="5.3.0"/>
     <PackageVersion Include="NSubstitute.Analyzers.CSharp" Version="1.0.17"/>
     <PackageVersion Include="coverlet.collector" Version="6.0.4"/>
+    <PackageVersion Include="FluentAssertions" Version="8.3.0" />
     <!-- Examples only -->
     <PackageVersion Include="dotNetRdf" Version="$(DotNetRdfVersion)"/>
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6"/>
@@ -44,5 +45,8 @@
     <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.6"/>
     <PackageVersion Include="Microsoft.Extensions.Logging" Version="9.0.6"/>
     <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.6"/>
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" PrivateAssets="all" ExcludeAssets="runtime" />
+
   </ItemGroup>
 </Project>
