--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Verify formatting
-        run: dotnet format OSLC4Net.Core.sln --verify-no-changes
+        run: dotnet format OSLC4Net.Core.sln -v diag --check
 
   test:
     needs: [format]
