--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,9 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Verify formatting
-        run: dotnet format OSLC4Net.Core.sln -v diag --check
+        run: |
+          dotnet format OSLC4Net.Core.sln style --verify-no-changes
+          dotnet format OSLC4Net.Core.sln whitespace --verify-no-changes
 
   test:
     needs: [format]
