--- a/.github/workflows/rebase.yml
+++ b/.github/workflows/rebase.yml
@@ -10,6 +10,7 @@ permissions:
 jobs:
   rebase:
     runs-on: ubuntu-24.04
+    timeout-minutes: 15
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@ec9f2d5744a09debf3a187a3f4f675c53b671911 # v2.13.0
