--- a/OSLC4Net_SDK/Tests/OSLC4Net.Test.AspireHost/OSLC4Net.Test.AspireHost.csproj
+++ b/OSLC4Net_SDK/Tests/OSLC4Net.Test.AspireHost/OSLC4Net.Test.AspireHost.csproj
@@ -1,6 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-  <Sdk Name="Aspire.AppHost.Sdk" Version="9.5.2" />
+<Project Sdk="Aspire.AppHost.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost"/>
   </ItemGroup>
 
 </Project>
