--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -152,13 +152,13 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
-        run: dotnet build --no-restore
+        run: dotnet build --no-restore --configuration Release
       - name: Test (with Refimpl CM tests)
-        run: dotnet test --no-build --verbosity normal  --collect:"XPlat Code Coverage"
+        run: dotnet test --solution OSLC4Net.Core.slnx --no-build --configuration Release -- --coverage --report-trx
         if: |
           matrix.os != 'windows-latest'
       - name: Test (without Refimpl CM tests)
-        run: dotnet test --no-build --verbosity normal  --filter TestCategory!=RunningOslcServerRequired --collect:"XPlat Code Coverage"
+        run: dotnet test --solution OSLC4Net.Core.slnx --no-build --configuration Release --treenode-filter '/*/*/*/*[TestCategory!=RunningOslcServerRequired]' -- --coverage --report-trx
         if: |
           matrix.os == 'windows-latest'
       # - name: Set version suffix
