--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -154,11 +154,11 @@ jobs:
       - name: Build
         run: dotnet build --no-restore --configuration Release
       - name: Test (with Refimpl CM tests)
-        run: dotnet test --solution OSLC4Net.Core.slnx --no-build --configuration Release -- --coverage --report-trx
+        run: dotnet test --solution OSLC4Net.Core.slnx --no-build --configuration Release -- --coverage --coverage-output-format cobertura --coverage-output ./coverage/
         if: |
           matrix.os != 'windows-latest'
       - name: Test (without Refimpl CM tests)
-        run: dotnet test --solution OSLC4Net.Core.slnx --no-build --configuration Release --treenode-filter '/*/*/*/*[TestCategory!=RunningOslcServerRequired]' -- --coverage --report-trx
+        run: dotnet test --solution OSLC4Net.Core.slnx --no-build --configuration Release --treenode-filter '/*/*/*/*[TestCategory!=RunningOslcServerRequired]' -- --coverage --coverage-output-format cobertura --coverage-output ./coverage/
         if: |
           matrix.os == 'windows-latest'
       # - name: Set version suffix
