--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -168,6 +168,9 @@ jobs:
         uses: codecov/codecov-action@5a1091511ad55cbe89839c7260b706298ca349f7 # v5.5.1
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          directory: main/OSLC4Net_SDK/Tests/
+          exclude: .nuget
       - name: Pack NuGet packages (snapshot)
         shell: pwsh
         run: |
