--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -158,7 +158,7 @@ jobs:
         if: |
           matrix.os != 'windows-latest'
       - name: Test (without Refimpl CM tests)
-        run: dotnet test --solution OSLC4Net.Core.slnx --no-build --configuration Release --treenode-filter '/*/*/*/*[TestCategory!=RunningOslcServerRequired]' --coverage --coverage-output-format cobertura --results-directory './main/OSLC4Net_SDK/Tests/results/'
+        run: dotnet test --solution OSLC4Net.Core.slnx --no-build --configuration Release --treenode-filter '/*/*/*/*[TestCategory!=RunningOslcServerRequired]' --coverage --coverage-output-format cobertura
         if: |
           matrix.os == 'windows-latest'
       # - name: Set version suffix
