--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -170,6 +170,11 @@ jobs:
           reports: '${{ github.workspace }}/**/TestResults/**/*.cobertura.xml'
           targetdir: '${{ github.workspace }}/coveragereports'
           reporttypes: 'Cobertura;MarkdownSummaryGithub'
+      - name: Upload coverage into summary
+        # Only on non windows runners
+        if: ${{ runner.os != 'Windows' }}
+        run: |
+          cat $GITHUB_WORKSPACE/coveragereports/SummaryGithub.md >> $GITHUB_STEP_SUMMARY
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@5a1091511ad55cbe89839c7260b706298ca349f7 # v5.5.1
