feat: add experimental AllowedValues POCO
refactor samples to clean up the code

--- a/OSLC4Net_SDK/OSLC4Net.Core/OSLC4Net.Core.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Core/OSLC4Net.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <RootNamespace>OSLC4Net.Core</RootNamespace>
     <AssemblyName>OSLC4Net.Core</AssemblyName>
   </PropertyGroup>
