--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,14 +6,16 @@ name: CI
 on:
   push:
     branches: ["main", "master"]
-    paths:
-      - "OSLC4Net_SDK/**"
-      - ".github/workflows/main.yml"
+    # because it's a required check for the merge group
+    # paths:
+    #   - "OSLC4Net_SDK/**"
+    #   - ".github/workflows/*.yml"
   pull_request:
     branches: ["main", "master"]
-    paths:
-      - "OSLC4Net_SDK/**"
-      - ".github/workflows/main.yml"
+    # because it's a required check for the merge group
+    # paths:
+    #   - "OSLC4Net_SDK/**"
+    #   - ".github/workflows/main.yml"
   merge_group:
   release:
     types:
