Add dependency group for Aspire packages

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,10 @@ updates:
     schedule:
       interval: "daily"
     groups:
+      aspire-deps:
+        patterns:
+          - "Aspire.AppHost.Sdk"
+          - "Aspire.Hosting.*"
       test-deps:
         patterns:
           - "xunit*"
