docs: coverage instructions
Signed-off-by: Andrew Berezovskyi <andriib@kth.se>

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-/tmp/
+### danielpalme/ReportGenerator
 
-###
+CoverageReport/
+
+### Verify
 
 *.received.*
 
 ############################################
+
+/tmp/
 
 TestResults/**
 **/obj/**/*
